Updated Application Link

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <p>The <strong>M&T Innovation Fund</strong> is a University- and M&T-backed student run organization looking to provide value creation for seed-stage ventures. Along with value creation tasks, non-equity grants will be provided for specific expenses.
                     </strong></p>
                     <p>The Fund is managed and operated by current M&T students from all class years. Faculty advisers, M&T Program administration, and M&T alumni act as support for the Fund.</p>
-                    <p>The Fund is similar to an incubator or accelerator. Candidate ventures should be as interested in venture development as they are in the non-equity grants. Grants will likely fall between $500~3000.</p>
+                    <p>The Fund is similar to an incubator or accelerator. Candidate ventures should be as interested in venture development as they are in the non-equity grants. Grants will likely fall between $1000~5000.</p>
                     <p>The Fund will only give out grant money for expenses that are 1) specific, 2) near-term, and 3) related to the venture development in which the Fund is involved. That is, the Fund is not interested in handing out non-equity grants for "black box" expenses, or for expenses a venture anticipates having in a year's time.</p>
                 </div>
             </div>
@@ -173,8 +173,8 @@
                         <h1>Apply Now</h1>
                         <p>Are you a current Penn student (undergraduate or graduate), recent M&T alum, or Penn-affiliated employee or professor with an idea you’d like us to consider funding? </p>
                         <br/>
-                        <p>Submit your information below! This round has a deadline of February 13th. </p>
-                        <a href="https://mandtinnovationfund.typeform.com/to/A3I9LT" class="btn btn-default btn-lg">Apply Now</a>
+                        <p>Submit your information below! The deadline for the Winter 2020 cohort is November 22nd at 11:59 PM. </p>
+                        <a href="https://karan15.typeform.com/to/naA6qf" class="btn btn-default btn-lg">Apply Now</a>
                         <!-- <p>Are you a current Penn student (undergraduate or graduate) or a recent M&T alum with an idea you’d like us to consider funding? Look out for applications to be funded by the M&T Innovation Fund soon!</p> -->
                     </div>
                 </div>
