--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                             <h3>Alex Carbonell</h3>
                         </div>
                         <div class="col-lg-4">
-                            <img src="img/Aryan.JPG" class="img-responsive" alt="Responsive image">
+                            <img src="img/Aryan_pic.jpeg" class="img-responsive" alt="Responsive image">
                             <h3>Aryan Chauhan</h3>
                         </div>
                     </div>
