--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
                             <a class="page-scroll" href="#team">Team</a>
                         </li>
                         <li>
+                             <a href="/blog.html">Blog</a>
+                        </li>
+                        <li>
                             <a class="page-scroll" href="#contact">Contact</a>
                         </li>
                     </ul>
