Added links to home page

--- a/blog.html
+++ b/blog.html
@@ -54,22 +54,22 @@
                             <a href="#page-top"></a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="#about">About</a>
+                            <a class="page-scroll" href="index.html#about">About</a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="#portfolio">Portfolio</a>
+                            <a class="page-scroll" href="index.html#portfolio">Portfolio</a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="#apply">Apply</a>
+                            <a class="page-scroll" href="index.html#apply">Apply</a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="#team">Team</a>
+                            <a class="page-scroll" href="index.html#team">Team</a>
                         </li>
                         <li>
                              <a href="/blog.html">Blog</a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="#contact">Contact</a>
+                            <a class="page-scroll" href="index.html#contact">Contact</a>
                         </li>
                     </ul>
                 </div>
