--- a/blog.html
+++ b/blog.html
@@ -77,6 +77,23 @@
             </div>
             <!-- /.container -->
         </nav>
+        <!-- Intro Header -->
+        <header class="intro">
+            <div class="intro-body">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="brand-logo"></div>
+                            <!-- <h1 class="brand-heading">The Jerome Fisher M&T<br>Innovation Fund</h1> -->
+                            <p class="intro-text">Written by members of our team, this blog highlights events and opportunities in MTIF.</p>
+                            <a href="#about" class="btn btn-circle page-scroll">
+                                <i class="fa fa-angle-double-down animated"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </header>
         <!-- Blog #1 -->
         <section id="about" class="container content-section text-center red">
             <div class="row">
