--- a/blog.html
+++ b/blog.html
@@ -98,12 +98,11 @@
         <section id="about" class="container content-section text-center red">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h1>About the M&T Innovation Fund</h1>
-                    <p>The <strong>M&T Innovation Fund</strong> is a University- and M&T-backed student run organization looking to provide value creation for seed-stage ventures. Along with value creation tasks, non-equity grants will be provided for specific expenses.
-                    </strong></p>
-                    <p>The Fund is managed and operated by current M&T students from all class years. Faculty advisers, M&T Program administration, and M&T alumni act as support for the Fund.</p>
-                    <p>The Fund is similar to an incubator or accelerator. Candidate ventures should be as interested in venture development as they are in the non-equity grants. Grants will likely fall between $1000~5000.</p>
-                    <p>The Fund will only give out grant money for expenses that are 1) specific, 2) near-term, and 3) related to the venture development in which the Fund is involved. That is, the Fund is not interested in handing out non-equity grants for "black box" expenses, or for expenses a venture anticipates having in a year's time.</p>
+                    <h1>Dr Jeffrey Babin: Transitioning from student entrepreneur to full-fledged entrepreneur</h1>
+                    <p>Dr Babin is Practice Professor and Associate Director of the Engineering Entrepreneurship Program. On campus, Dr Babin is an advisor for the Wharton Venture Initiative Program (VIP) and an entrepreneurial fellow for the Weiss Tech House. He has significant entrepreneurial experience as a founder and Managing Director of Antiphony Partners LLC, a strategic consulting firm that helps companies create sustainable value through innovation.</p>
+                    <p>On 11/22/19, M&T Innovation Fund held a Q&A panel with Dr Babin discussing the transition from a student entrepreneur to a professional entrepreneur, and the entrepreneurial opportunities available at Penn.</p>
+                    <h2>Introduction</h2>
+                    <p>There are lots of entrepreneurship opportunities available at Penn. Every school (except for the College) has some innovation or entrepreneurship program, in addition to co-curricular and extra-curricular opportunities. These include <strong>12 accelerators on Penn’s campus</strong> to help students explore their ideas. That is a lot of intellectual horsepower!</p>
                 </div>
             </div>
         </section>
