--- a/blog.html
+++ b/blog.html
@@ -103,6 +103,77 @@
                     <p>On 11/22/19, M&T Innovation Fund held a Q&A panel with Dr Babin discussing the transition from a student entrepreneur to a professional entrepreneur, and the entrepreneurial opportunities available at Penn.</p>
                     <h2>Introduction</h2>
                     <p>There are lots of entrepreneurship opportunities available at Penn. Every school (except for the College) has some innovation or entrepreneurship program, in addition to co-curricular and extra-curricular opportunities. These include <strong>12 accelerators on Penn’s campus</strong> to help students explore their ideas. That is a lot of intellectual horsepower!</p>
+                    <h1>Dr Jeffrey Babin: Transitioning from student entrepreneur to full-fledged entrepreneur</h1>
+<p><strong>&nbsp;</strong></p>
+<p>Dr Babin is Practice Professor and Associate Director of the <em>Engineering Entrepreneurship Program</em>. On campus, Dr Babin is an advisor for the <em>Wharton Venture Initiative Program </em>(<em>VIP</em>) and an entrepreneurial fellow for the <em>Weiss Tech House</em>. He has significant entrepreneurial experience as a founder and Managing Director of <em>Antiphony Partners LLC</em>, a strategic consulting firm that helps companies create sustainable value through innovation.</p>
+<p>On 11/22/19, <em>M&amp;T Innovation Fund</em> held a Q&amp;A panel with Dr Babin discussing the transition from a student entrepreneur to a professional entrepreneur, and the entrepreneurial opportunities available at Penn.</p>
+<p>&nbsp;</p>
+<p>Q&amp;A Panel in Larry Robbins House</p>
+<p><strong>&nbsp;</strong></p>
+<p><strong>&nbsp;</strong></p>
+<p><strong>&nbsp;</strong></p>
+<p><strong>&nbsp;</strong></p>
+<p><strong>&nbsp;</strong></p>
+<p><strong>&nbsp;</strong></p>
+<p><strong>&nbsp;</strong></p>
+<p><strong><em>Introduction.</em></strong></p>
+<p>There are lots of entrepreneurship opportunities available at Penn. Every school (except for the College) has some innovation or entrepreneurship program, in addition to co-curricular and extra-curricular opportunities. These include <strong>12 accelerators</strong> on Penn&rsquo;s campus to help students explore their ideas. That is a lot of intellectual horsepower!</p>
+<p><strong><em>How do you differentiate between these opportunities?</em></strong></p>
+<p>Differentiating opportunities has certainly been a historical challenge. However, some structure has developed in recent years. Some opportunities like<em> Wharton VIP</em> are exclusive to certain schools, while others like <em>Weiss Tech House</em> are student-run and open to the entire student body.</p>
+<p><strong><em>Let&rsquo;s talk about successful Penn startups.</em></strong></p>
+<p><strong>War-B:</strong> Worked on pricing with faculty members, they were members of VIP.</p>
+<p><strong>Zodiac:</strong> Outgrowth of Pete Fader in the Marketing department.</p>
+<p>The best startups out of Penn take advantage of <strong>ALL</strong> of the resources provided to them. They apply to all the accelerators and look at the largest body of individuals for advice. Penn costs $75K/ year; the main value that you obtain is not from your classes, but rather the networks and facilities that you have access to.</p>
+<p><strong><em>Tangen Hall.</em></strong></p>
+<p>Tangen Hall is a student entrepreneurship hub that will finish construction in Fall 2020. All entrepreneurship facilities will move to Tangen Hall thereafter.</p>
+<p>Most of the first floor will be a maker space (managed by SEAS) open to all students. A commercial kitchen and retail space for student businesses will also be present.</p>
+<table>
+<tbody>
+<tr>
+<td width="628">
+<table width="100%">
+<tbody>
+<tr>
+<td>
+<p>Tangen Hall</p>
+</td>
+</tr>
+</tbody>
+</table>
+&nbsp;</td>
+</tr>
+</tbody>
+</table>
+<p>Even though students these days are more remotely-located, there is value to being concentrated in one area. For example, Dr Babin was once asked how to meet an engineer by a Wharton student! This issue will no longer persist as all students will have 24x7 access to the building.&nbsp;&nbsp; &nbsp;</p>
+<p><strong><em>Future VIP plans.</em></strong></p>
+<p>There is <em>VIP</em> in San Francisco, but not here for Penn alumni. That will be changed so that alumni and students can be better connected in the future.</p>
+<p><strong><em>Advice for getting co-founders.</em></strong></p>
+<p>You have to earn co-founders, and co-founders have to earn being with your startup. You have to pitch a vision and they have to pitch their value to your vision. Don&rsquo;t be a &ldquo;<a href="https://whartoniteseekscodemonkey-blog.tumblr.com/">Whartonite Seeks Code Monkey</a>&rdquo;.</p>
+<p>If you work on a class project with someone, that doesn&rsquo;t entitle you to equity ownership if the idea becomes a company. Rather, your efforts entitle you to a better grade.</p>
+<p>If someone chooses to work on the idea after a class ends, you should attract people by what value they can add as opposed to just splitting equity in some arbitrary proportion. The vision must come before the details; <strong>everyone must earn their equity</strong>.</p>
+<p>Dr Babin often refers to Chapter 6 of <a href="https://www.amazon.com/Founders-Dilemmas-Anticipating-Foundation-Entrepreneurship/dp/0691158304"><em>The Founder&rsquo;s Dilemma</em></a>. The author argues that initially dividing up equity is easy and delusional; rather, everyone should earn the equity by contributing. <strong>Dead weight is futile</strong>.</p>
+<p><strong><em>Advice for planning your company timeline.</em></strong></p>
+<p>Always plan for <a href="https://startuplawyer.com/incorporation/what-is-four-years-with-a-one-year-cliff">4 Years with a One Year Cliff</a>. It is important to be transparent when dividing equity to avoid future resentment or conflict.</p>
+<p><strong><em>It is hard to develop student businesses because of rigorous courses. Further, students often assume that others must have the same idea. What is your perspective?</em></strong></p>
+<p>Let&rsquo;s look at it less as horse-ahead-of-the-cart. If you ask the question: should I make a startup or get a job, you should get a job. If you are invested in your idea and are worried about it going away, then you should follow your startup.</p>
+<p><strong><em>What should we do about investors that look for more-experienced individuals?</em></strong></p>
+<p>Investors are more concerned about whether we will get tired of our startup as we are so young and often have different opportunities.&nbsp;</p>
+<p>Some investors only look for grey hair-don&rsquo;t pitch to them. But you can get over being young very quickly if you prove yourself.</p>
+<p><strong><em>User-testing among friends. Bias and very homogenous. How to find a good group for user-testing.</em></strong></p>
+<p>You can use social media to beta test for very little money. Almost everyone at Penn can arm-twist themselves to 100 users (friends to friends). However, you cannot get up to 5000 users by arm-twisting; direct sales are not feasible for scaling. Your product needs to generate positive word-of-mouth; your friends themselves cannot spread your idea if your idea isn&rsquo;t up to scratch.</p>
+<p><strong>Never demo your product</strong>. Give it to your friend and let them figure out what to do. If they don&rsquo;t get what to do, then you need to redesign your UI. This was <em>Apple</em>&rsquo;s philosophy when developing the Macintosh and iPhone. &nbsp;</p>
+<p><strong><em>Laws and regulations.</em></strong></p>
+<p>Don&rsquo;t break laws or do anything that can result in a call to the Dean or President. For example, <em>Just 3D Print It</em> was a Penn startup that 3D printed public models and resold them to consumers.</p>
+<p>They also listed Dr Babin as an ambassador, despite never having spoken to him about this matter. Campus ambassador programs are very good, but one should exercise caution when adding someone to their startup.</p>
+<p><strong><em>Student-led organizations.</em></strong></p>
+<p>The problem with student-led organizations is that success is largely determined by the leader. Sometimes there is a good leader that elicits growth, and sometimes bad leaders hold back their organization.</p>
+<p>What <em>Weiss Fund</em> does to mitigate this issue is overlap leaders. There is a senior running the Fund with a junior shadowing them. It has been working well for them over the past few years.</p>
+<p><strong><em>Thought on working on something &lsquo;new&rsquo; vs collaborating.</em></strong></p>
+<p>Rather than pursuing an idea that is similar to an existing company, it is generally better to join the existing company and add value to them.</p>
+<p><strong><em>Is there a list of all Penn startups?</em></strong></p>
+<p>One thing that we are not good at Penn is centralization. While there is no centralized list, many accelerators have a list of their portfolio companies. <em>M&amp;T Innovation Fund</em> has a list of our portfolio companies over the past 5 years. <em>Weiss Fund</em> has startup data for the past 6 years, <em>VIP</em> has startup data for the past 15 years. But there is definitely room for improvement.</p>
+<p>If we were to assign every startup a unique key field, then we would be able to collect data on all their activity. But that requires funding and data support. If you want to work on the data side, contact Dr Babin.</p>
+<p>&nbsp;</p>
                 </div>
             </div>
         </section>
