--- a/blog.html
+++ b/blog.html
@@ -102,7 +102,7 @@
 <p><strong>&nbsp;</strong></p>
 <p>Dr Babin is Practice Professor and Associate Director of the <em>Engineering Entrepreneurship Program</em>. On campus, Dr Babin is an advisor for the <em>Wharton Venture Initiative Program </em>(<em>VIP</em>) and an entrepreneurial fellow for the <em>Weiss Tech House</em>. He has significant entrepreneurial experience as a founder and Managing Director of <em>Antiphony Partners LLC</em>, a strategic consulting firm that helps companies create sustainable value through innovation.</p>
 <p>On 11/22/19, <em>M&amp;T Innovation Fund</em> held a Q&amp;A panel with Dr Babin discussing the transition from a student entrepreneur to a professional entrepreneur, and the entrepreneurial opportunities available at Penn.</p>
-<p><img src="/img/babin1.tif" alt="Panel Image"></p>
+<p><img src="/img/babin1.jpg" alt="Panel Image"></p>
 <p>Q&amp;A Panel in Larry Robbins House</p>
 <p><strong>&nbsp;</strong></p>
 <p><strong><em>Introduction.</em></strong></p>
