--- a/blog.html
+++ b/blog.html
@@ -42,7 +42,7 @@
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                     </button>
-                    <a class="navbar-brand page-scroll" href="#page-top">
+                    <a class="navbar-brand page-scroll" href="/index.html#page-top">
                         <div class="navbar-image"></div><div class="navbar-text">Menu</div>
                     </a>
                 </div>
