Changed Application background img

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         </section>
         <!-- About Section -->
         <section id="apply" class="container content-section text-center black">
-            <div class="snow-section">
+            <div class="spring-section">
                 <div class="container text-box">
                     <div class="col-lg-8 col-lg-offset-2">
                         <h1>Apply Now</h1>
