--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
                 <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
                     <ul class="nav navbar-nav">
                         <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-                        <li class="hidden">
-                            <a href="#page-top"></a>
-                        </li>
+                        <!-- <li class="hidden"> -->
+                        <!--    <a href="#page-top"></a> -->
+                        <!-- </li> -->
                         <li>
                             <a class="page-scroll" href="#about">About</a>
                         </li>
