--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
             <div class="container">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+                    <!-- <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
-                    </button>
+                    </button> -->
                     <a class="navbar-brand page-scroll" href="#page-top">
                         <div class="navbar-image"></div><div class="navbar-text">Menu</div>
                     </a>
