--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
             <div class="container">
                 <div class="navbar-header">
-                    <!-- <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
-                    </button> -->
+                    </button>
                     <a class="navbar-brand page-scroll" href="#page-top">
                         <div class="navbar-image"></div><div class="navbar-text">Menu</div>
                     </a>
@@ -50,9 +50,9 @@
                 <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
                     <ul class="nav navbar-nav">
                         <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-                        <!-- <li class="hidden"> -->
-                        <!--    <a href="#page-top"></a> -->
-                        <!-- </li> -->
+                        <li class="hidden">
+                            <a href="#page-top"></a>
+                        </li>
                         <li>
                             <a class="page-scroll" href="#about">About</a>
                         </li>
