--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
         <nav class="navbar navbar-custom navbar-fixed-top top-nav-collapse" role="navigation">
             <div class="container">
                 <div class="navbar-header">
-                    
+                    <a class="navbar-brand page-scroll" href="#page-top">
+                        <div class="navbar-image"></div><div class="navbar-text">Menu</div>
+                    </a> 
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
