--- a/index.html
+++ b/index.html
@@ -34,11 +34,14 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
     </head>
-    <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+    <body id="page-top">
         <!-- Navigation -->
         <nav class="navbar navbar-custom navbar-fixed-top top-nav-collapse" role="navigation">
             <div class="container">
                 <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+                    <i class="fa fa-bars"></i>
+                    </button>
                     <a class="navbar-brand page-scroll" href="#page-top">
                         <div class="navbar-image"></div><div class="navbar-text">Menu</div>
                     </a> 
