--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
                     <ul class="nav navbar-nav">
                         <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-                        <li class="hidden">
+                        <li class="page-scroll">
                             <a href="#page-top"></a>
                         </li>
                         <li>
