--- a/index.html
+++ b/index.html
@@ -120,7 +120,19 @@
             </div>
         </section>
         <section id="portfolio" class="content-section text-center white">
-            <div class="row">
+            <div class="wrap-collabsible">
+                <input id="collapsible" class="toggle" type="checkbox">
+                <label for="collapsible" class="lbl-toggle">More Info</label>
+                <div class="collapsible-content">
+                    <div class="content-inner">
+                        <p>
+                            Test Drop-down Title
+                        </p>
+                    </div>
+                </div>
+            </div>
+            
+            <!-- <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h1>Portfolio</h1>
                     <hr>
@@ -166,7 +178,7 @@
                 </div>
             </div>
             <br><br>
-            </div>
+            </div> -->
         </section>
         <!-- About Section -->
         <section id="apply" class="container content-section text-center black">
