--- a/index.html
+++ b/index.html
@@ -120,9 +120,11 @@
             </div>
         </section>
         <section id="portfolio" class="content-section text-center white">
-            <div class="col-lg-8 col-lg-offset-2">
-                <p>Portfolio</p?>
-            </div>
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <p>Portfolio</p?>
+                </div>
+            <\div>
             <div class="wrap-collabsible">
                 <input id="collapsible" class="toggle" type="checkbox">
                 <label for="collapsible" class="lbl-toggle">2018</label>
@@ -155,7 +157,7 @@
                             <img src="img/mnt.png">
                         </div>
                         <div class="col-lg-4">
-                            <img src="img/aws.png">
+                            <p style="text-align:center;"><img src="img/aws.png"></p>
                         </div>
                     </div>
                 </div>
