--- a/index.html
+++ b/index.html
@@ -120,7 +120,9 @@
             </div>
         </section>
         <section id="portfolio" class="content-section text-center white">
-            
+            <div class="col-lg-8 col-lg-offset-2">
+                <p>Portfolio</p?>
+            </div>
             <div class="wrap-collabsible">
                 <input id="collapsible" class="toggle" type="checkbox">
                 <label for="collapsible" class="lbl-toggle">2018</label>
