--- a/index.html
+++ b/index.html
@@ -120,8 +120,24 @@
             </div>
         </section>
         <section id="portfolio" class="content-section text-center white">
-            <div class="col-lg-8 col-lg-offset-2">
-                <p>Portfolio</p?>
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <h1>Sponsors</h1>
+                    <hr>
+                    <p>The M&T Innovation Fund is supported by the University of Pennsylvania, the Jerome Fisher Management and Technology Program, and M&T alumni as well as various corporate sponsors.
+                    </p>
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <img src="img/penn_full.png">
+                        </div>
+                        <div class="col-lg-6">
+                            <img src="img/mnt.png">
+                        </div>
+                        <div class="col-lg-4">
+                            <p style="text-align:center;"><img src="img/aws.png"></p>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="wrap-collabsible">
                 <input id="collapsible" class="toggle" type="checkbox">
