--- a/index.html
+++ b/index.html
@@ -122,21 +122,10 @@
         <section id="portfolio" class="content-section text-center white">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h1>Sponsors</h1>
+                    <h1>Portfolio</h1>
                     <hr>
-                    <p>The M&T Innovation Fund is supported by the University of Pennsylvania, the Jerome Fisher Management and Technology Program, and M&T alumni as well as various corporate sponsors.
+                    <p>The M&T Innovation Fund has a diverse porfolio of previously-funded companies, many of which have gone on to be successfull and have an impact in the world.
                     </p>
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <img src="img/penn_full.png">
-                        </div>
-                        <div class="col-lg-6">
-                            <img src="img/mnt.png">
-                        </div>
-                        <div class="col-lg-4">
-                            <p style="text-align:center;"><img src="img/aws.png"></p>
-                        </div>
-                    </div>
                 </div>
             </div>
             <div class="wrap-collabsible">
