--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h1>Portfolio</h1>
                     <hr>
-                    <p>The M&T Innovation Fund has a diverse porfolio of previously-funded companies, many of which have gone on to be successfull and have an impact in the world.
+                    <p>The M&T Innovation Fund has a diverse porfolio of previously-funded companies, many of which have gone on to be successful and have an impact in the world.
                     </p>
                 </div>
             </div>
@@ -145,7 +145,7 @@
                     </div>
                     </div>
                 </div>
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h1>Sponsors</h1>
                     <hr>
@@ -163,7 +163,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h1>Portfolio</h1>
