--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
                     </div>
                 </div>
             </div>
+            </div>
             <br><br>
             </div> -->
         </section>
