--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
                 </div>
             </div>
             <div class="wrap-collabsible">
-  <input id="collapsible" class="toggle" type="checkbox">
-  <label for="collapsible" class="lbl-toggle">More Info</label>
+  <input id="collapsible2" class="toggle" type="checkbox">
+  <label for="collapsible2" class="lbl-toggle">More Info</label>
   <div class="collapsible-content">
     <div class="content-inner">
       <p>
