--- a/index.html
+++ b/index.html
@@ -200,6 +200,42 @@
                     </div>
                 </div>
             </div>
+            <div class="wrap-collabsible">
+                <input id="collapsible5" class="toggle" type="checkbox">
+                <label for="collapsible5" class="lbl-toggle">2015-2016</label>
+                <div class="collapsible-content">
+                    <div class="content-inner">
+                        <div class="row">
+                        <div class="col-lg-6">
+                            <img src="img/groupk.png">
+                            <p><a href="https://www.groupkdiagnostics.com/">Group K Diagnostics</a> is working to develop a multi-test modular point-of-care (POC) diagnostic device that offers accurate, fast, and affordable diagnoses. The aim to reduce and eliminate the delay in clinical decisions caused by lab tests and prevent mis-reporting of abnormal results. Group K’s first test solution for Liver Function Testing has been submitted to the FDA, and they are working on bench trials for their Comprehensive Metabolic Panel and Liver Cancer Diagnostic.</p>
+                        </div>
+                        <div class="col-lg-6">
+                            <img src="img/arium.png">
+                            <p><a href="https://arium.io/">Arium</a> offers a convenient platform where lenders can easily collect, verify, and analyze bank statements. Users can search through transactions, identify overdrafts, estimate revenue, and more with information updated in real time. Arium is able to access financial information and verified transactions from major banks and institutions in the US, including Wells Fargo, Bank of America, and PNC. </p>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+            </div>
+            <div class="wrap-collabsible">
+                <input id="collapsible6" class="toggle" type="checkbox">
+                <label for="collapsible6" class="lbl-toggle">2014-2015</label>
+                <div class="collapsible-content">
+                    <div class="content-inner">
+                        <div class="row">
+                        <div class="col-lg-6">
+                            <img src="img/groupk.png">
+                            <p><a href="https://www.groupkdiagnostics.com/">Group K Diagnostics</a> is working to develop a multi-test modular point-of-care (POC) diagnostic device that offers accurate, fast, and affordable diagnoses. The aim to reduce and eliminate the delay in clinical decisions caused by lab tests and prevent mis-reporting of abnormal results. Group K’s first test solution for Liver Function Testing has been submitted to the FDA, and they are working on bench trials for their Comprehensive Metabolic Panel and Liver Cancer Diagnostic.</p>
+                        </div>
+                        <div class="col-lg-6">
+                            <img src="img/arium.png">
+                            <p><a href="https://arium.io/">Arium</a> offers a convenient platform where lenders can easily collect, verify, and analyze bank statements. Users can search through transactions, identify overdrafts, estimate revenue, and more with information updated in real time. Arium is able to access financial information and verified transactions from major banks and institutions in the US, including Wells Fargo, Bank of America, and PNC. </p>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+            </div>
         </section>
             <!-- <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
