--- a/index.html
+++ b/index.html
@@ -152,22 +152,26 @@
                 <div class="collapsible-content">
                     <div class="content-inner">
                         <div class="row">
-                        <div class="col-lg-6">
-                            <img src="img/Strella.png">
+                            <div class="col-lg-6">
+                                <img src="img/Strella.png">
+                            </div>
+                            <div class="col-lg-6">
+                                <img src="img/Puget.png">
+                            </div>
                         </div>
-                        <div class="col-lg-6">
-                            <img src="img/Puget.png">
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <img src="img/Vise.svg">
+                            </div>
+                            <div class="col-lg-6">
+                                <img src="img/PillBot.png">
+                            </div>
                         </div>
-                        <div class="col-lg-6">
-                            <img src="img/Vise.png">
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <img src="img/PhraseHealth.png">
+                            </div>
                         </div>
-                        <div class="col-lg-6">
-                            <img src="img/PillBot.png">
-                        </div>
-                        <div class="col-lg-6">
-                            <img src="img/PhraseHealth.png">
-                        </div>
-                    </div>
                     </div>
                 </div>
             </div>
