--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                         </div>
                         <div class="row">
                             <div class="col-lg-6">
-                                <img src="img/Vise.svg">
+                                <img src="img/Vise.png">
                             </div>
                             <div class="col-lg-6">
                                 <img src="img/PillBot.png">
