--- a/index.html
+++ b/index.html
@@ -153,23 +153,23 @@
                     <div class="content-inner">
                         <div class="row">
                             <div class="col-lg-6">
-                                <img src="img/Strella.png">
+                                <img src="img/Strella.png" class="logos">
                             </div>
                             <div class="col-lg-6">
-                                <img src="img/Puget.png">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <img src="img/Vise.png">
-                            </div>
-                            <div class="col-lg-6">
-                                <img src="img/PillBot.png">
+                                <img src="img/Puget.png" class="logos">
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-6">
-                                <img src="img/PhraseHealth.png">
+                                <img src="img/Vise.png" class="logos">
+                            </div>
+                            <div class="col-lg-6">
+                                <img src="img/PillBot.png" class="logos">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <img src="img/PhraseHealth.png" class="logos">
                             </div>
                         </div>
                     </div>
