update years for portfolio

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             </div>
             <div class="wrap-collabsible">
                 <input id="collapsible" class="toggle" type="checkbox">
-                <label for="collapsible" class="lbl-toggle">2019-2020</label>
+                <label for="collapsible" class="lbl-toggle">2020</label>
                 <div class="collapsible-content">
                     <div class="content-inner">
                         <div class="row">
@@ -148,7 +148,7 @@
             </div>
             <div class="wrap-collabsible">
                 <input id="collapsible2" class="toggle" type="checkbox">
-                <label for="collapsible2" class="lbl-toggle">2018-2019</label>
+                <label for="collapsible2" class="lbl-toggle">2019</label>
                 <div class="collapsible-content">
                     <div class="content-inner">
                         <div class="row">
@@ -177,7 +177,7 @@
             </div>
             <div class="wrap-collabsible">
                 <input id="collapsible3" class="toggle" type="checkbox">
-                <label for="collapsible3" class="lbl-toggle">2017-2018</label>
+                <label for="collapsible3" class="lbl-toggle">2018</label>
                 <div class="collapsible-content">
                     <div class="content-inner">
                         <div class="row">
@@ -195,7 +195,7 @@
             </div>
             <div class="wrap-collabsible">
                 <input id="collapsible4" class="toggle" type="checkbox">
-                <label for="collapsible4" class="lbl-toggle">2016-2017</label>
+                <label for="collapsible4" class="lbl-toggle">2017</label>
                 <div class="collapsible-content">
                     <div class="content-inner">
                         <div class="row">
@@ -213,7 +213,7 @@
             </div>
             <div class="wrap-collabsible">
                 <input id="collapsible5" class="toggle" type="checkbox">
-                <label for="collapsible5" class="lbl-toggle">2015-2016</label>
+                <label for="collapsible5" class="lbl-toggle">2016</label>
                 <div class="collapsible-content">
                     <div class="content-inner">
                         <div class="row">
@@ -231,7 +231,7 @@
             </div>
             <div class="wrap-collabsible">
                 <input id="collapsible6" class="toggle" type="checkbox">
-                <label for="collapsible6" class="lbl-toggle">2014-2015</label>
+                <label for="collapsible6" class="lbl-toggle">2015</label>
                 <div class="collapsible-content">
                     <div class="content-inner">
                         <div class="row">
