--- a/index.html
+++ b/index.html
@@ -329,8 +329,8 @@
                         <h1>Apply Now</h1>
                         <p>Are you a current Penn student (undergraduate or graduate), recent M&T alum, or Penn-affiliated employee or professor with an idea you’d like us to consider funding? </p>
                         <br/>
-                        <p>Submit your information below! Applications will be reviewed for the Spring 2020 cohort on a rolling basis. </p>
-                        <a href="https://karan15.typeform.com/to/naA6qf" class="btn btn-default btn-lg">Apply Now</a>
+                        <p>Submit your information below! Applications will be reviewed for the 2020-2021 cohort on a rolling basis. </p>
+                        <a href="https://savanp.typeform.com/to/zbsDlRUA" class="btn btn-default btn-lg">Apply Now</a>
                         <!-- <p>Are you a current Penn student (undergraduate or graduate) or a recent M&T alum with an idea you’d like us to consider funding? Look out for applications to be funded by the M&T Innovation Fund soon!</p> -->
                     </div>
                 </div>
