--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 </div>
             </div>
         </section>
-        <section id="portfolio" class="content-section text-center white">
+        <!-- <section id="portfolio" class="content-section text-center white">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h1>Portfolio</h1>
@@ -257,7 +257,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
             <!-- <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h1>Sponsors</h1>
