--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                 <div class="container text-box">
                     <div class="col-lg-8 col-lg-offset-2">
                         <h1>Apply Now</h1>
-                        <p>Applications are currently closed for the 2020-2021 Cohort. Stay tuned for applicaitons for the upcoming 2021-2022 cycle!</p>
+                        <p>Applications are currently closed for the 2020-2021 Cohort. Stay tuned for applications for the upcoming 2021-2022 cycle!</p>
                         <!--
                         <p>Are you a current Penn student (undergraduate or graduate), recent M&T alum, or Penn-affiliated employee or professor with an idea you’d like us to consider funding? </p>
                         <br/>
