--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <p>The <strong>M&T Innovation Fund</strong> is a University- and M&T-backed student run organization looking to provide value creation for seed-stage ventures. Along with value creation tasks, non-equity grants will be provided for specific expenses.
                     </strong></p>
                     <p>The Fund is managed and operated by current M&T students from all class years. Faculty advisers, M&T Program administration, and M&T alumni act as support for the Fund.</p>
-                    <p>The Fund is similar to an incubator or accelerator. Candidate ventures should be as interested in venture development as they are in the non-equity grants. Grants will likely fall between $1000~5000.</p>
+                    <p>The Fund is similar to an incubator or accelerator. Candidate ventures should be as interested in venture development as they are in the non-equity grants. Grants will likely fall between $4000~7000.</p>
                     <p>The Fund will only give out grant money for expenses that are 1) specific, 2) near-term, and 3) related to the venture development in which the Fund is involved. That is, the Fund is not interested in handing out non-equity grants for "black box" expenses, or for expenses a venture anticipates having in a year's time.</p>
                 </div>
             </div>
@@ -327,7 +327,7 @@
                 <div class="container text-box">
                     <div class="col-lg-8 col-lg-offset-2">
                         <h1>Apply Now</h1>
-                        <p>Applications are currently closed for the 2020-2021 Cohort. Stay tuned for applications for the upcoming 2021-2022 cycle!</p>
+                        <p>Applications are now open for the 2021-2022 Cohort!</p>
                         <!--
                         <p>Are you a current Penn student (undergraduate or graduate), recent M&T alum, or Penn-affiliated employee or professor with an idea you’d like us to consider funding? </p>
                         <br/>
@@ -424,7 +424,7 @@
                                 </div>
                                 <div id="question2" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                                   <div class="card-body">
-                                    The fund’s objective is to provide continued support over the semester to develop a component of your project while working with M&T students. For example, you may end up working closely with our team to help you develop a marketing plan or to provide technical consulting with the advancement of a software product. For the M&T Innovation Fund to be right fit for you must be interested in a project based funding approach rather than an unconditional grant.
+                                    The fund’s objective is to provide continued support over the academic year to develop a component of your project while working with M&T students. For example, you may end up working closely with our team to help you develop a marketing plan or to provide technical consulting with the advancement of a software product. For the M&T Innovation Fund to be right fit for you must be interested in a project based funding approach rather than an unconditional grant.
                                   </div>
                                 </div>
                               </div>
