--- a/index.html
+++ b/index.html
@@ -328,6 +328,7 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <h1>Apply Now</h1>
                         <p>Applications are now open for the 2021-2022 Cohort!</p>
+                        <a href = 'https://forms.gle/5kzFYmvgDqN1Gjsf7'> Application Link <\href>
                         <!--
                         <p>Are you a current Penn student (undergraduate or graduate), recent M&T alum, or Penn-affiliated employee or professor with an idea you’d like us to consider funding? </p>
                         <br/>
